LU-18284 llite: disallow udio exceptions

Require the unaligned_dio feature flag to be present and
disable limited udio support for 2.14 and 2.15 as these
exceptions cause failures with 2.12 servers.

Test-Parameters: trivial
Test-Parameters: testlist=sanity clientarch=x86_64 clientdistro=el9.4  serverversion=2.12.9 serverdistro=el7.9 env=ONLY="119e 119f 119g 119h 119i 119j",ONLY_REPEAT=10
Test-Parameters: testlist=sanity clientarch=x86_64 clientdistro=el9.2  serverversion=2.12.9 serverdistro=el7.9 env=ONLY="119e 119f 119g 119h 119i 119j",ONLY_REPEAT=10
Test-Parameters: testlist=sanity clientarch=x86_64 clientdistro=el8.10 serverversion=2.12.9 serverdistro=el7.9 env=ONLY="119e 119f 119g 119h 119i 119j",ONLY_REPEAT=10
Test-Parameters: testlist=sanity clientarch=x86_64 clientdistro=el8.10 serverversion=2.15.4 serverdistro=el8.9 env=ONLY="119e 119f 119g 119h 119i 119j",ONLY_REPEAT=10
Fixes: 07a1272233 ("LU-17525 llite: unaligned DIO interop page alignment")
Signed-off-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Change-Id: If3d3d41f3f1f4f96279e9c3d7978f78dd7333259
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/56571
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>